# wagtail-instance-selector

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: ci.yml
example/: .gitignore  README.md  instance_selector  manage.py  requirements.txt
example/example_app/: apps.py  blocks.py  models.py  wagtail_hooks.py
example/example_app/migrations/: 0001_initial.py  0002_image_status.py  0003_shop_content.py
example/example_project/: settings.py  urls.py  wsgi.py
instance_selector/: __init__.py  apps.py  blocks.py  constants.py  edit_handlers.py  exceptions.py  middleware.py  registry.py  selectors.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
instance_selector/static/instance_selector/: instance-selector-controller.js  instance_selector.css  instance_selector_embed.js  instance_selector_telepath.js  instance_selector_widget.js
instance_selector/templates/instance_selector/: instance_selector_embed.html  instance_selector_widget.html  instance_selector_widget_display.html
tests/: test_instance_selector.py
tests/test_project/: urls.py
tests/test_project/test_app/: apps.py  models.py  wagtail_hooks.py
